fixed dash header on mobile overlapping duck

--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,7 @@ body {
     font-size: 30px;
     text-align: left;
     color: var(--aqua);
-    margin: 0px 0 30px 40px;
+    margin: 80px 0 30px 40px;
   }
 
   .dash-button {
